// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`valid data normalizes exactly as before (N13) > for sessions of every version 1`] = `
[
  {
    "date": "2026-09-01T10:00:00.000Z",
    "duration": 1500,
    "id": "1690000000000",
    "note": "",
    "subjectColor": "#4F9CF9",
    "subjectId": "physics",
    "subjectName": "Physics",
    "tags": [],
  },
  {
    "date": "2026-09-01T10:00:00.000Z",
    "duration": 900,
    "id": "s2",
    "note": "Past paper 1",
    "subjectColor": "#22C55E",
    "subjectId": "m",
    "subjectName": "Maths",
    "tags": [
      "Past papers",
      "Recap",
    ],
  },
  {
    "createdAt": "2026-09-01T10:00:00.000Z",
    "date": "2026-09-01T10:00:00.000Z",
    "duration": 61,
    "id": "session-abc",
    "note": "",
    "subjectColor": "#A855F7",
    "subjectId": "custom-x",
    "subjectName": "CS",
    "tags": [],
    "updatedAt": "2026-09-01T10:00:00.000Z",
  },
  {
    "date": "2026-09-01T10:00:00.000Z",
    "duration": 0,
    "id": "sess-mtihxds0-3",
    "note": "",
    "subjectColor": "#888888",
    "subjectId": "",
    "subjectName": "",
    "tags": [],
  },
]
`;

exports[`valid data normalizes exactly as before (N13) > for subjects of every version, the defaults and a catalogue template 1`] = `
[
  {
    "board": "OCR",
    "color": "#4F9CF9",
    "exam": "OCR Physics A",
    "id": "physics",
    "name": "Physics",
    "qualification": "alevel",
    "spec": "H556",
    "specName": "Physics A",
    "tier": null,
    "topics": [
      {
        "done": true,
        "id": "ph0",
        "name": "Foundations",
        "subtasks": [],
      },
    ],
  },
  {
    "board": "Custom",
    "color": "#ff0000",
    "exam": "My tutor",
    "id": "custom-1",
    "name": "Latin",
    "qualification": "other",
    "spec": null,
    "specName": null,
    "tier": null,
    "topics": [],
  },
  {
    "board": "Custom",
    "color": "#4F9CF9",
    "exam": "Custom",
    "id": "custom-2",
    "name": "Untitled subject",
    "qualification": "other",
    "spec": null,
    "specName": null,
    "tier": null,
    "topics": [
      {
        "done": false,
        "id": "c2-0",
        "name": "Untitled topic",
        "subtasks": [
          {
            "done": false,
            "id": "c2-0-st0",
            "name": "Untitled subtask",
          },
        ],
      },
      {
        "done": false,
        "id": "custom-2-1",
        "name": "Untitled topic",
        "subtasks": [],
      },
    ],
  },
  {
    "board": "Custom",
    "color": "#4F9CF9",
    "exam": "Custom",
    "id": "sub-mtihxds0-3",
    "name": "Untitled subject",
    "qualification": "other",
    "spec": null,
    "specName": null,
    "tier": null,
    "topics": [],
  },
  {
    "board": "Edexcel",
    "color": "#22C55E",
    "exam": "Edexcel",
    "examYear": 2027,
    "id": "m",
    "name": "Maths",
    "papers": [
      {
        "examDate": "2027-05-20",
        "id": "p1",
        "name": "Paper 1",
      },
      {
        "id": "p2",
        "name": "p2",
      },
    ],
    "qualification": "gcse",
    "spec": "1MA1",
    "specName": null,
    "tier": "higher",
    "topics": [
      {
        "done": false,
        "id": "m0",
        "name": "Number",
        "paper": [
          "p1",
          "p2",
        ],
        "subtasks": [
          {
            "done": true,
            "id": "m0-st0",
            "name": "Fractions",
          },
        ],
      },
      {
        "catalogueTopicId": "edexcel-1ma1-t01",
        "done": true,
        "higherOnly": true,
        "id": "m1",
        "name": "Proof",
        "paper": "p2",
        "subtasks": [],
      },
      {
        "done": false,
        "id": "m2",
        "keepAsTopic": true,
        "name": "NEA",
        "subtasks": [],
      },
    ],
  },
  {
    "board": "OCR",
    "color": "#A855F7",
    "createdAt": "2026-09-01T10:00:00.000Z",
    "exam": "OCR",
    "id": "custom-2f0c3a2e-1111-4a4a-9b9b-222222222222",
    "milestones": [
      {
        "catalogueMilestoneId": "ocr-h446-m01",
        "createdAt": "2026-09-01T10:00:00.000Z",
        "done": false,
        "due": "2027-03-01",
        "id": "ms-1",
        "kind": "nea",
        "name": "NEA draft",
        "updatedAt": "2026-09-01T10:00:00.000Z",
      },
      {
        "done": true,
        "due": null,
        "id": "custom-2f0c3a2e-1111-4a4a-9b9b-222222222222-m1",
        "kind": "practical",
        "name": "Practical",
      },
    ],
    "name": "Computer Science",
    "qualification": "alevel",
    "spec": "H446",
    "specName": null,
    "tier": null,
    "topics": [
      {
        "createdAt": "2026-09-01T10:00:00.000Z",
        "done": true,
        "id": "cs0",
        "name": "Algorithms",
        "subtasks": [],
        "updatedAt": "2026-09-01T10:00:00.000Z",
      },
    ],
    "updatedAt": "2026-09-01T10:00:00.000Z",
  },
  {
    "board": "OCR",
    "color": "#4F9CF9",
    "exam": "OCR Physics A",
    "id": "physics",
    "name": "Physics",
    "qualification": "alevel",
    "spec": "H556",
    "specName": "Physics A",
    "tier": null,
    "topics": [
      {
        "done": false,
        "id": "ph0",
        "name": "Practical Skills in Physics",
        "subtasks": [],
      },
      {
        "done": false,
        "id": "ph1",
        "name": "Foundations of Physics",
        "subtasks": [],
      },
      {
        "done": false,
        "id": "ph2",
        "name": "Forces and Motion",
        "subtasks": [],
      },
      {
        "done": false,
        "id": "ph3",
        "name": "Electrons, Waves and Photons",
        "subtasks": [],
      },
      {
        "done": false,
        "id": "ph4",
        "name": "Newtonian World and Astrophysics",
        "subtasks": [],
      },
      {
        "done": false,
        "id": "ph5",
        "name": "Particles and Medical Physics",
        "subtasks": [],
      },
    ],
  },
  {
    "board": "Edexcel",
    "color": "#34D399",
    "exam": "Edexcel",
    "id": "maths",
    "name": "Maths",
    "qualification": "alevel",
    "spec": "9MA0",
    "specName": null,
    "tier": null,
    "topics": [
      {
        "done": false,
        "id": "ma0",
        "name": "Algebra and Functions",
        "subtasks": [],
      },
      {
        "done": false,
        "id": "ma1",
        "name": "Coordinate Geometry",
        "subtasks": [],
      },
      {
        "done": false,
        "id": "ma2",
        "name": "Sequences and Series",
        "subtasks": [],
      },
      {
        "done": false,
        "id": "ma3",
        "name": "Trigonometry",
        "subtasks": [],
      },
      {
        "done": false,
        "id": "ma4",
        "name": "Exponentials and Logarithms",
        "subtasks": [],
      },
      {
        "done": false,
        "id": "ma5",
        "name": "Differentiation",
        "subtasks": [],
      },
      {
        "done": false,
        "id": "ma6",
        "name": "Integration",
        "subtasks": [],
      },
      {
        "done": false,
        "id": "ma7",
        "name": "Vectors",
        "subtasks": [],
      },
      {
        "done": false,
        "id": "ma8",
        "name": "Statistical Sampling",
        "subtasks": [],
      },
      {
        "done": false,
        "id": "ma9",
        "name": "Probability and Distributions",
        "subtasks": [],
      },
      {
        "done": false,
        "id": "ma10",
        "name": "Hypothesis Testing",
        "subtasks": [],
      },
      {
        "done": false,
        "id": "ma11",
        "name": "Kinematics",
        "subtasks": [],
      },
      {
        "done": false,
        "id": "ma12",
        "name": "Forces and Newton's Laws",
        "subtasks": [],
      },
      {
        "done": false,
        "id": "ma13",
        "name": "Projectiles and Moments",
        "subtasks": [],
      },
    ],
  },
  {
    "board": "Edexcel",
    "color": "#A78BFA",
    "exam": "Edexcel",
    "id": "further",
    "name": "Further Maths",
    "qualification": "alevel",
    "spec": "9FM0",
    "specName": null,
    "tier": null,
    "topics": [
      {
        "done": false,
        "id": "fu0",
        "name": "Complex Numbers",
        "subtasks": [],
      },
      {
        "done": false,
        "id": "fu1",
        "name": "Argand Diagrams",
        "subtasks": [],
      },
      {
        "done": false,
        "id": "fu2",
        "name": "Matrices",
        "subtasks": [],
      },
      {
        "done": false,
        "id": "fu3",
        "name": "Linear Transformations",
        "subtasks": [],
      },
      {
        "done": false,
        "id": "fu4",
        "name": "Further Algebra",
        "subtasks": [],
      },
      {
        "done": false,
        "id": "fu5",
        "name": "Series and Sums",
        "subtasks": [],
      },
      {
        "done": false,
        "id": "fu6",
        "name": "Further Calculus",
        "subtasks": [],
      },
      {
        "done": false,
        "id": "fu7",
        "name": "Polar Coordinates",
        "subtasks": [],
      },
      {
        "done": false,
        "id": "fu8",
        "name": "Hyperbolic Functions",
        "subtasks": [],
      },
      {
        "done": false,
        "id": "fu9",
        "name": "Differential Equations",
        "subtasks": [],
      },
      {
        "done": false,
        "id": "fu10",
        "name": "Further Vectors",
        "subtasks": [],
      },
      {
        "done": false,
        "id": "fu11",
        "name": "Proof by Induction",
        "subtasks": [],
      },
    ],
  },
  {
    "board": "OCR",
    "color": "#FBBF24",
    "exam": "OCR",
    "id": "cs",
    "name": "Computer Science",
    "qualification": "alevel",
    "spec": "H446",
    "specName": null,
    "tier": null,
    "topics": [
      {
        "done": false,
        "id": "cs0",
        "name": "Components of a Computer",
        "subtasks": [],
      },
      {
        "done": false,
        "id": "cs1",
        "name": "Software and Software Development",
        "subtasks": [],
      },
      {
        "done": false,
        "id": "cs2",
        "name": "Exchanging Data",
        "subtasks": [],
      },
      {
        "done": false,
        "id": "cs3",
        "name": "Data Types, Structures and Algorithms",
        "subtasks": [],
      },
      {
        "done": false,
        "id": "cs4",
        "name": "Legal, Moral and Ethical Issues",
        "subtasks": [],
      },
      {
        "done": false,
        "id": "cs5",
        "name": "Elements of Computational Thinking",
        "subtasks": [],
      },
      {
        "done": false,
        "id": "cs6",
        "name": "Problem Solving and Programming",
        "subtasks": [],
      },
      {
        "done": false,
        "id": "cs7",
        "name": "Algorithms",
        "subtasks": [],
      },
      {
        "done": false,
        "id": "cs8",
        "name": "Theory of Computation",
        "subtasks": [],
      },
      {
        "done": false,
        "id": "cs9",
        "name": "NEA Programming Project",
        "subtasks": [],
      },
    ],
  },
  {
    "board": "AQA",
    "color": "#F472B6",
    "exam": "AQA English Language",
    "id": "aqa-8700",
    "milestones": [
      {
        "catalogueMilestoneId": "aqa-8700-m01",
        "done": false,
        "due": null,
        "id": "aqa-8700-m0",
        "kind": "nea",
        "name": "Spoken language endorsement",
      },
    ],
    "name": "English Language",
    "papers": [
      {
        "id": "p1",
        "name": "Explorations in creative reading and writing",
      },
      {
        "id": "p2",
        "name": "Writers' viewpoints and perspectives",
      },
    ],
    "qualification": "gcse",
    "spec": "8700",
    "specName": "English Language",
    "tier": null,
    "topics": [
      {
        "catalogueTopicId": "aqa-8700-t01",
        "done": false,
        "id": "aqa-8700-t0",
        "name": "Reading a fiction extract",
        "paper": "p1",
        "subtasks": [],
      },
      {
        "catalogueTopicId": "aqa-8700-t02",
        "done": false,
        "id": "aqa-8700-t1",
        "name": "Descriptive or narrative writing",
        "paper": "p1",
        "subtasks": [],
      },
      {
        "catalogueTopicId": "aqa-8700-t03",
        "done": false,
        "id": "aqa-8700-t2",
        "name": "Reading non-fiction and literary non-fiction",
        "paper": "p2",
        "subtasks": [],
      },
      {
        "catalogueTopicId": "aqa-8700-t04",
        "done": false,
        "id": "aqa-8700-t3",
        "name": "Writing to present a viewpoint",
        "paper": "p2",
        "subtasks": [],
      },
      {
        "catalogueTopicId": "aqa-8700-t05",
        "done": false,
        "id": "aqa-8700-t4",
        "name": "Critical reading and comprehension",
        "paper": [
          "p1",
          "p2",
        ],
        "subtasks": [],
      },
      {
        "catalogueTopicId": "aqa-8700-t06",
        "done": false,
        "id": "aqa-8700-t5",
        "name": "Summary and synthesis",
        "paper": [
          "p1",
          "p2",
        ],
        "subtasks": [],
      },
      {
        "catalogueTopicId": "aqa-8700-t07",
        "done": false,
        "id": "aqa-8700-t6",
        "name": "Analysing language, form and structure",
        "paper": [
          "p1",
          "p2",
        ],
        "subtasks": [],
      },
      {
        "catalogueTopicId": "aqa-8700-t08",
        "done": false,
        "id": "aqa-8700-t7",
        "name": "Comparing texts",
        "paper": "p2",
        "subtasks": [],
      },
      {
        "catalogueTopicId": "aqa-8700-t09",
        "done": false,
        "id": "aqa-8700-t8",
        "name": "Writing for impact and technical accuracy",
        "paper": [
          "p1",
          "p2",
        ],
        "subtasks": [],
      },
    ],
  },
  {
    "board": "AQA",
    "color": "#FB923C",
    "exam": "AQA English Literature",
    "id": "aqa-8702",
    "name": "English Literature",
    "papers": [
      {
        "id": "p1",
        "name": "Shakespeare and the 19th-century novel",
      },
      {
        "id": "p2",
        "name": "Modern texts and poetry",
      },
    ],
    "qualification": "gcse",
    "spec": "8702",
    "specName": "English Literature",
    "tier": null,
    "topics": [
      {
        "catalogueTopicId": "aqa-8702-t01",
        "done": false,
        "id": "aqa-8702-t0",
        "name": "Unseen poetry",
        "paper": "p2",
        "subtasks": [],
      },
      {
        "catalogueTopicId": "aqa-8702-t02",
        "done": false,
        "id": "aqa-8702-t1",
        "name": "Shakespeare: Macbeth",
        "paper": "p1",
        "subtasks": [],
      },
      {
        "catalogueTopicId": "aqa-8702-t09",
        "done": false,
        "id": "aqa-8702-t2",
        "name": "19th-century novel: A Christmas Carol",
        "paper": "p1",
        "subtasks": [],
      },
      {
        "catalogueTopicId": "aqa-8702-t15",
        "done": false,
        "id": "aqa-8702-t3",
        "name": "Modern text: An Inspector Calls",
        "paper": "p2",
        "subtasks": [],
      },
      {
        "catalogueTopicId": "aqa-8702-t28",
        "done": false,
        "id": "aqa-8702-t4",
        "name": "Poetry anthology: Power and Conflict",
        "paper": "p2",
        "subtasks": [],
      },
    ],
  },
  {
    "board": "AQA",
    "color": "#34D399",
    "exam": "AQA Mathematics",
    "id": "aqa-8300",
    "name": "Mathematics",
    "papers": [
      {
        "id": "p1",
        "name": "Paper 1 (non-calculator)",
      },
      {
        "id": "p2",
        "name": "Paper 2 (calculator)",
      },
      {
        "id": "p3",
        "name": "Paper 3 (calculator)",
      },
    ],
    "qualification": "gcse",
    "spec": "8300",
    "specName": "Mathematics",
    "tier": null,
    "topics": [
      {
        "catalogueTopicId": "aqa-8300-t01",
        "done": false,
        "id": "aqa-8300-t0",
        "name": "Structure and calculation",
        "paper": [
          "p1",
          "p2",
          "p3",
        ],
        "subtasks": [],
      },
      {
        "catalogueTopicId": "aqa-8300-t02",
        "done": false,
        "id": "aqa-8300-t1",
        "name": "Fractions, decimals and percentages",
        "paper": [
          "p1",
          "p2",
          "p3",
        ],
        "subtasks": [],
      },
      {
        "catalogueTopicId": "aqa-8300-t03",
        "done": false,
        "id": "aqa-8300-t2",
        "name": "Measures and accuracy",
        "paper": [
          "p1",
          "p2",
          "p3",
        ],
        "subtasks": [],
      },
      {
        "catalogueTopicId": "aqa-8300-t04",
        "done": false,
        "id": "aqa-8300-t3",
        "name": "Algebraic notation, vocabulary and manipulation",
        "paper": [
          "p1",
          "p2",
          "p3",
        ],
        "subtasks": [],
      },
      {
        "catalogueTopicId": "aqa-8300-t05",
        "done": false,
        "id": "aqa-8300-t4",
        "name": "Graphs",
        "paper": [
          "p1",
          "p2",
          "p3",
        ],
        "subtasks": [],
      },
      {
        "catalogueTopicId": "aqa-8300-t06",
        "done": false,
        "id": "aqa-8300-t5",
        "name": "Solving equations and inequalities",
        "paper": [
          "p1",
          "p2",
          "p3",
        ],
        "subtasks": [],
      },
      {
        "catalogueTopicId": "aqa-8300-t07",
        "done": false,
        "id": "aqa-8300-t6",
        "name": "Sequences",
        "paper": [
          "p1",
          "p2",
          "p3",
        ],
        "subtasks": [],
      },
      {
        "catalogueTopicId": "aqa-8300-t08",
        "done": false,
        "id": "aqa-8300-t7",
        "name": "Ratio, proportion and rates of change",
        "paper": [
          "p1",
          "p2",
          "p3",
        ],
        "subtasks": [],
      },
      {
        "catalogueTopicId": "aqa-8300-t09",
        "done": false,
        "id": "aqa-8300-t8",
        "name": "Properties and constructions",
        "paper": [
          "p1",
          "p2",
          "p3",
        ],
        "subtasks": [],
      },
      {
        "catalogueTopicId": "aqa-8300-t10",
        "done": false,
        "id": "aqa-8300-t9",
        "name": "Mensuration and calculation",
        "paper": [
          "p1",
          "p2",
          "p3",
        ],
        "subtasks": [],
      },
      {
        "catalogueTopicId": "aqa-8300-t11",
        "done": false,
        "id": "aqa-8300-t10",
        "name": "Vectors",
        "paper": [
          "p1",
          "p2",
          "p3",
        ],
        "subtasks": [],
      },
      {
        "catalogueTopicId": "aqa-8300-t12",
        "done": false,
        "id": "aqa-8300-t11",
        "name": "Probability",
        "paper": [
          "p1",
          "p2",
          "p3",
        ],
        "subtasks": [],
      },
      {
        "catalogueTopicId": "aqa-8300-t13",
        "done": false,
        "id": "aqa-8300-t12",
        "name": "Statistics",
        "paper": [
          "p1",
          "p2",
          "p3",
        ],
        "subtasks": [],
      },
      {
        "catalogueTopicId": "aqa-8300-t14",
        "done": false,
        "higherOnly": true,
        "id": "aqa-8300-t13",
        "name": "Transformations of graphs",
        "paper": [
          "p1",
          "p2",
          "p3",
        ],
        "subtasks": [],
      },
      {
        "catalogueTopicId": "aqa-8300-t15",
        "done": false,
        "higherOnly": true,
        "id": "aqa-8300-t14",
        "name": "Gradients and areas under graphs",
        "paper": [
          "p1",
          "p2",
          "p3",
        ],
        "subtasks": [],
      },
      {
        "catalogueTopicId": "aqa-8300-t16",
        "done": false,
        "higherOnly": true,
        "id": "aqa-8300-t15",
        "name": "Solving equations by iteration",
        "paper": [
          "p1",
          "p2",
          "p3",
        ],
        "subtasks": [],
      },
      {
        "catalogueTopicId": "aqa-8300-t17",
        "done": false,
        "higherOnly": true,
        "id": "aqa-8300-t16",
        "name": "Instantaneous and average rates of change",
        "paper": [
          "p1",
          "p2",
          "p3",
        ],
        "subtasks": [],
      },
      {
        "catalogueTopicId": "aqa-8300-t18",
        "done": false,
        "higherOnly": true,
        "id": "aqa-8300-t17",
        "name": "Combined transformations",
        "paper": [
          "p1",
          "p2",
          "p3",
        ],
        "subtasks": [],
      },
      {
        "catalogueTopicId": "aqa-8300-t19",
        "done": false,
        "higherOnly": true,
        "id": "aqa-8300-t18",
        "name": "Sine and cosine rules",
        "paper": [
          "p1",
          "p2",
          "p3",
        ],
        "subtasks": [],
      },
      {
        "catalogueTopicId": "aqa-8300-t20",
        "done": false,
        "higherOnly": true,
        "id": "aqa-8300-t19",
        "name": "Conditional probability",
        "paper": [
          "p1",
          "p2",
          "p3",
        ],
        "subtasks": [],
      },
      {
        "catalogueTopicId": "aqa-8300-t21",
        "done": false,
        "higherOnly": true,
        "id": "aqa-8300-t20",
        "name": "Histograms with unequal class widths",
        "paper": [
          "p1",
          "p2",
          "p3",
        ],
        "subtasks": [],
      },
    ],
  },
  {
    "board": "AQA",
    "color": "#60A5FA",
    "exam": "AQA Combined Science Trilogy",
    "id": "aqa-8464",
    "milestones": [
      {
        "catalogueMilestoneId": "aqa-8464-m01",
        "done": false,
        "due": null,
        "id": "aqa-8464-m0",
        "kind": "practical",
        "name": "Required practical activities",
      },
    ],
    "name": "Combined Science",
    "papers": [
      {
        "id": "b1",
        "name": "Biology Paper 1",
      },
      {
        "id": "b2",
        "name": "Biology Paper 2",
      },
      {
        "id": "c1",
        "name": "Chemistry Paper 1",
      },
      {
        "id": "c2",
        "name": "Chemistry Paper 2",
      },
      {
        "id": "p1",
        "name": "Physics Paper 1",
      },
      {
        "id": "p2",
        "name": "Physics Paper 2",
      },
    ],
    "qualification": "gcse",
    "spec": "8464",
    "specName": "Combined Science Trilogy",
    "tier": null,
    "topics": [
      {
        "catalogueTopicId": "aqa-8464-t01",
        "done": false,
        "id": "aqa-8464-t0",
        "name": "Cell biology",
        "paper": "b1",
        "subtasks": [],
      },
      {
        "catalogueTopicId": "aqa-8464-t02",
        "done": false,
        "id": "aqa-8464-t1",
        "name": "Organisation",
        "paper": "b1",
        "subtasks": [],
      },
      {
        "catalogueTopicId": "aqa-8464-t03",
        "done": false,
        "id": "aqa-8464-t2",
        "name": "Infection and response",
        "paper": "b1",
        "subtasks": [],
      },
      {
        "catalogueTopicId": "aqa-8464-t04",
        "done": false,
        "id": "aqa-8464-t3",
        "name": "Bioenergetics",
        "paper": "b1",
        "subtasks": [],
      },
      {
        "catalogueTopicId": "aqa-8464-t05",
        "done": false,
        "id": "aqa-8464-t4",
        "name": "Homeostasis and response",
        "paper": "b2",
        "subtasks": [],
      },
      {
        "catalogueTopicId": "aqa-8464-t06",
        "done": false,
        "id": "aqa-8464-t5",
        "name": "Inheritance, variation and evolution",
        "paper": "b2",
        "subtasks": [],
      },
      {
        "catalogueTopicId": "aqa-8464-t07",
        "done": false,
        "id": "aqa-8464-t6",
        "name": "Ecology",
        "paper": "b2",
        "subtasks": [],
      },
      {
        "catalogueTopicId": "aqa-8464-t08",
        "done": false,
        "id": "aqa-8464-t7",
        "name": "Atomic structure and the periodic table",
        "paper": "c1",
        "subtasks": [],
      },
      {
        "catalogueTopicId": "aqa-8464-t09",
        "done": false,
        "id": "aqa-8464-t8",
        "name": "Bonding, structure and the properties of matter",
        "paper": "c1",
        "subtasks": [],
      },
      {
        "catalogueTopicId": "aqa-8464-t10",
        "done": false,
        "id": "aqa-8464-t9",
        "name": "Quantitative chemistry",
        "paper": "c1",
        "subtasks": [],
      },
      {
        "catalogueTopicId": "aqa-8464-t11",
        "done": false,
        "id": "aqa-8464-t10",
        "name": "Chemical changes",
        "paper": "c1",
        "subtasks": [],
      },
      {
        "catalogueTopicId": "aqa-8464-t12",
        "done": false,
        "id": "aqa-8464-t11",
        "name": "Energy changes",
        "paper": "c1",
        "subtasks": [],
      },
      {
        "catalogueTopicId": "aqa-8464-t13",
        "done": false,
        "id": "aqa-8464-t12",
        "name": "The rate and extent of chemical change",
        "paper": "c2",
        "subtasks": [],
      },
      {
        "catalogueTopicId": "aqa-8464-t14",
        "done": false,
        "id": "aqa-8464-t13",
        "name": "Organic chemistry",
        "paper": "c2",
        "subtasks": [],
      },
      {
        "catalogueTopicId": "aqa-8464-t15",
        "done": false,
        "id": "aqa-8464-t14",
        "name": "Chemical analysis",
        "paper": "c2",
        "subtasks": [],
      },
      {
        "catalogueTopicId": "aqa-8464-t16",
        "done": false,
        "id": "aqa-8464-t15",
        "name": "Chemistry of the atmosphere",
        "paper": "c2",
        "subtasks": [],
      },
      {
        "catalogueTopicId": "aqa-8464-t17",
        "done": false,
        "id": "aqa-8464-t16",
        "name": "Using resources",
        "paper": "c2",
        "subtasks": [],
      },
      {
        "catalogueTopicId": "aqa-8464-t18",
        "done": false,
        "id": "aqa-8464-t17",
        "name": "Energy",
        "paper": "p1",
        "subtasks": [],
      },
      {
        "catalogueTopicId": "aqa-8464-t19",
        "done": false,
        "id": "aqa-8464-t18",
        "name": "Electricity",
        "paper": "p1",
        "subtasks": [],
      },
      {
        "catalogueTopicId": "aqa-8464-t20",
        "done": false,
        "id": "aqa-8464-t19",
        "name": "Particle model of matter",
        "paper": "p1",
        "subtasks": [],
      },
      {
        "catalogueTopicId": "aqa-8464-t21",
        "done": false,
        "id": "aqa-8464-t20",
        "name": "Atomic structure",
        "paper": "p1",
        "subtasks": [],
      },
      {
        "catalogueTopicId": "aqa-8464-t22",
        "done": false,
        "id": "aqa-8464-t21",
        "name": "Forces",
        "paper": "p2",
        "subtasks": [],
      },
      {
        "catalogueTopicId": "aqa-8464-t23",
        "done": false,
        "id": "aqa-8464-t22",
        "name": "Waves",
        "paper": "p2",
        "subtasks": [],
      },
      {
        "catalogueTopicId": "aqa-8464-t24",
        "done": false,
        "id": "aqa-8464-t23",
        "name": "Magnetism and electromagnetism",
        "paper": "p2",
        "subtasks": [],
      },
      {
        "catalogueTopicId": "aqa-8464-t25",
        "done": false,
        "higherOnly": true,
        "id": "aqa-8464-t24",
        "name": "Hormones to treat infertility",
        "paper": "b2",
        "subtasks": [],
      },
      {
        "catalogueTopicId": "aqa-8464-t26",
        "done": false,
        "higherOnly": true,
        "id": "aqa-8464-t25",
        "name": "Feedback systems",
        "paper": "b2",
        "subtasks": [],
      },
      {
        "catalogueTopicId": "aqa-8464-t27",
        "done": false,
        "higherOnly": true,
        "id": "aqa-8464-t26",
        "name": "Moles and balancing equations with moles",
        "paper": "c1",
        "subtasks": [],
      },
      {
        "catalogueTopicId": "aqa-8464-t28",
        "done": false,
        "higherOnly": true,
        "id": "aqa-8464-t27",
        "name": "Limiting reactants",
        "paper": "c1",
        "subtasks": [],
      },
      {
        "catalogueTopicId": "aqa-8464-t29",
        "done": false,
        "higherOnly": true,
        "id": "aqa-8464-t28",
        "name": "Oxidation and reduction in terms of electrons",
        "paper": "c1",
        "subtasks": [],
      },
      {
        "catalogueTopicId": "aqa-8464-t30",
        "done": false,
        "higherOnly": true,
        "id": "aqa-8464-t29",
        "name": "Strong and weak acids",
        "paper": "c1",
        "subtasks": [],
      },
      {
        "catalogueTopicId": "aqa-8464-t31",
        "done": false,
        "higherOnly": true,
        "id": "aqa-8464-t30",
        "name": "Half equations at electrodes",
        "paper": "c1",
        "subtasks": [],
      },
      {
        "catalogueTopicId": "aqa-8464-t32",
        "done": false,
        "higherOnly": true,
        "id": "aqa-8464-t31",
        "name": "Energy change of reactions from bond energies",
        "paper": "c1",
        "subtasks": [],
      },
      {
        "catalogueTopicId": "aqa-8464-t33",
        "done": false,
        "higherOnly": true,
        "id": "aqa-8464-t32",
        "name": "Changing conditions and equilibrium",
        "paper": "c2",
        "subtasks": [],
      },
      {
        "catalogueTopicId": "aqa-8464-t34",
        "done": false,
        "higherOnly": true,
        "id": "aqa-8464-t33",
        "name": "Alternative methods of extracting metals",
        "paper": "c2",
        "subtasks": [],
      },
      {
        "catalogueTopicId": "aqa-8464-t35",
        "done": false,
        "higherOnly": true,
        "id": "aqa-8464-t34",
        "name": "Momentum",
        "paper": "p2",
        "subtasks": [],
      },
      {
        "catalogueTopicId": "aqa-8464-t36",
        "done": false,
        "higherOnly": true,
        "id": "aqa-8464-t35",
        "name": "Fleming's left-hand rule and electric motors",
        "paper": "p2",
        "subtasks": [],
      },
    ],
  },
]
`;

exports[`valid data normalizes exactly as before (N13) > for subjects of every version, the defaults and a catalogue template 2`] = `
[
  {
    "board": "OCR",
    "color": "#4F9CF9",
    "exam": "OCR Physics A",
    "id": "physics",
    "name": "Physics",
    "qualification": "alevel",
    "spec": "H556",
    "specName": "Physics A",
    "tier": null,
    "topics": [
      {
        "done": false,
        "id": "ph0",
        "name": "Practical Skills in Physics",
        "subtasks": [],
      },
      {
        "done": false,
        "id": "ph1",
        "name": "Foundations of Physics",
        "subtasks": [],
      },
      {
        "done": false,
        "id": "ph2",
        "name": "Forces and Motion",
        "subtasks": [],
      },
      {
        "done": false,
        "id": "ph3",
        "name": "Electrons, Waves and Photons",
        "subtasks": [],
      },
      {
        "done": false,
        "id": "ph4",
        "name": "Newtonian World and Astrophysics",
        "subtasks": [],
      },
      {
        "done": false,
        "id": "ph5",
        "name": "Particles and Medical Physics",
        "subtasks": [],
      },
    ],
  },
  {
    "board": "Edexcel",
    "color": "#34D399",
    "exam": "Edexcel",
    "id": "maths",
    "name": "Maths",
    "qualification": "alevel",
    "spec": "9MA0",
    "specName": null,
    "tier": null,
    "topics": [
      {
        "done": false,
        "id": "ma0",
        "name": "Algebra and Functions",
        "subtasks": [],
      },
      {
        "done": false,
        "id": "ma1",
        "name": "Coordinate Geometry",
        "subtasks": [],
      },
      {
        "done": false,
        "id": "ma2",
        "name": "Sequences and Series",
        "subtasks": [],
      },
      {
        "done": false,
        "id": "ma3",
        "name": "Trigonometry",
        "subtasks": [],
      },
      {
        "done": false,
        "id": "ma4",
        "name": "Exponentials and Logarithms",
        "subtasks": [],
      },
      {
        "done": false,
        "id": "ma5",
        "name": "Differentiation",
        "subtasks": [],
      },
      {
        "done": false,
        "id": "ma6",
        "name": "Integration",
        "subtasks": [],
      },
      {
        "done": false,
        "id": "ma7",
        "name": "Vectors",
        "subtasks": [],
      },
      {
        "done": false,
        "id": "ma8",
        "name": "Statistical Sampling",
        "subtasks": [],
      },
      {
        "done": false,
        "id": "ma9",
        "name": "Probability and Distributions",
        "subtasks": [],
      },
      {
        "done": false,
        "id": "ma10",
        "name": "Hypothesis Testing",
        "subtasks": [],
      },
      {
        "done": false,
        "id": "ma11",
        "name": "Kinematics",
        "subtasks": [],
      },
      {
        "done": false,
        "id": "ma12",
        "name": "Forces and Newton's Laws",
        "subtasks": [],
      },
      {
        "done": false,
        "id": "ma13",
        "name": "Projectiles and Moments",
        "subtasks": [],
      },
    ],
  },
  {
    "board": "Edexcel",
    "color": "#A78BFA",
    "exam": "Edexcel",
    "id": "further",
    "name": "Further Maths",
    "qualification": "alevel",
    "spec": "9FM0",
    "specName": null,
    "tier": null,
    "topics": [
      {
        "done": false,
        "id": "fu0",
        "name": "Complex Numbers",
        "subtasks": [],
      },
      {
        "done": false,
        "id": "fu1",
        "name": "Argand Diagrams",
        "subtasks": [],
      },
      {
        "done": false,
        "id": "fu2",
        "name": "Matrices",
        "subtasks": [],
      },
      {
        "done": false,
        "id": "fu3",
        "name": "Linear Transformations",
        "subtasks": [],
      },
      {
        "done": false,
        "id": "fu4",
        "name": "Further Algebra",
        "subtasks": [],
      },
      {
        "done": false,
        "id": "fu5",
        "name": "Series and Sums",
        "subtasks": [],
      },
      {
        "done": false,
        "id": "fu6",
        "name": "Further Calculus",
        "subtasks": [],
      },
      {
        "done": false,
        "id": "fu7",
        "name": "Polar Coordinates",
        "subtasks": [],
      },
      {
        "done": false,
        "id": "fu8",
        "name": "Hyperbolic Functions",
        "subtasks": [],
      },
      {
        "done": false,
        "id": "fu9",
        "name": "Differential Equations",
        "subtasks": [],
      },
      {
        "done": false,
        "id": "fu10",
        "name": "Further Vectors",
        "subtasks": [],
      },
      {
        "done": false,
        "id": "fu11",
        "name": "Proof by Induction",
        "subtasks": [],
      },
    ],
  },
  {
    "board": "OCR",
    "color": "#FBBF24",
    "exam": "OCR",
    "id": "cs",
    "name": "Computer Science",
    "qualification": "alevel",
    "spec": "H446",
    "specName": null,
    "tier": null,
    "topics": [
      {
        "done": false,
        "id": "cs0",
        "name": "Components of a Computer",
        "subtasks": [],
      },
      {
        "done": false,
        "id": "cs1",
        "name": "Software and Software Development",
        "subtasks": [],
      },
      {
        "done": false,
        "id": "cs2",
        "name": "Exchanging Data",
        "subtasks": [],
      },
      {
        "done": false,
        "id": "cs3",
        "name": "Data Types, Structures and Algorithms",
        "subtasks": [],
      },
      {
        "done": false,
        "id": "cs4",
        "name": "Legal, Moral and Ethical Issues",
        "subtasks": [],
      },
      {
        "done": false,
        "id": "cs5",
        "name": "Elements of Computational Thinking",
        "subtasks": [],
      },
      {
        "done": false,
        "id": "cs6",
        "name": "Problem Solving and Programming",
        "subtasks": [],
      },
      {
        "done": false,
        "id": "cs7",
        "name": "Algorithms",
        "subtasks": [],
      },
      {
        "done": false,
        "id": "cs8",
        "name": "Theory of Computation",
        "subtasks": [],
      },
      {
        "done": false,
        "id": "cs9",
        "name": "NEA Programming Project",
        "subtasks": [],
      },
    ],
  },
]
`;

exports[`valid data normalizes exactly as before (N13) > through a backup file 1`] = `
{
  "sessions": [
    {
      "date": "2026-09-01T10:00:00.000Z",
      "duration": 1500,
      "id": "1690000000000",
      "note": "",
      "subjectColor": "#4F9CF9",
      "subjectId": "physics",
      "subjectName": "Physics",
      "tags": [],
    },
    {
      "date": "2026-09-01T10:00:00.000Z",
      "duration": 900,
      "id": "s2",
      "note": "Past paper 1",
      "subjectColor": "#22C55E",
      "subjectId": "m",
      "subjectName": "Maths",
      "tags": [
        "Past papers",
        "Recap",
      ],
    },
    {
      "createdAt": "2026-09-01T10:00:00.000Z",
      "date": "2026-09-01T10:00:00.000Z",
      "duration": 61,
      "id": "session-abc",
      "note": "",
      "subjectColor": "#A855F7",
      "subjectId": "custom-x",
      "subjectName": "CS",
      "tags": [],
      "updatedAt": "2026-09-01T10:00:00.000Z",
    },
    {
      "date": "2026-09-01T10:00:00.000Z",
      "duration": 0,
      "id": "sess-mtihxds0-3",
      "note": "",
      "subjectColor": "#888888",
      "subjectId": "",
      "subjectName": "",
      "tags": [],
    },
  ],
  "subjects": [
    {
      "board": "OCR",
      "color": "#4F9CF9",
      "exam": "OCR Physics A",
      "id": "physics",
      "name": "Physics",
      "qualification": "alevel",
      "spec": "H556",
      "specName": "Physics A",
      "tier": null,
      "topics": [
        {
          "done": true,
          "id": "ph0",
          "name": "Foundations",
          "subtasks": [],
        },
      ],
    },
    {
      "board": "Custom",
      "color": "#ff0000",
      "exam": "My tutor",
      "id": "custom-1",
      "name": "Latin",
      "qualification": "other",
      "spec": null,
      "specName": null,
      "tier": null,
      "topics": [],
    },
    {
      "board": "Custom",
      "color": "#4F9CF9",
      "exam": "Custom",
      "id": "custom-2",
      "name": "Untitled subject",
      "qualification": "other",
      "spec": null,
      "specName": null,
      "tier": null,
      "topics": [
        {
          "done": false,
          "id": "c2-0",
          "name": "Untitled topic",
          "subtasks": [
            {
              "done": false,
              "id": "c2-0-st0",
              "name": "Untitled subtask",
            },
          ],
        },
        {
          "done": false,
          "id": "custom-2-1",
          "name": "Untitled topic",
          "subtasks": [],
        },
      ],
    },
    {
      "board": "Custom",
      "color": "#4F9CF9",
      "exam": "Custom",
      "id": "sub-mtihxds0-3",
      "name": "Untitled subject",
      "qualification": "other",
      "spec": null,
      "specName": null,
      "tier": null,
      "topics": [],
    },
    {
      "board": "OCR",
      "color": "#A855F7",
      "createdAt": "2026-09-01T10:00:00.000Z",
      "exam": "OCR",
      "id": "custom-2f0c3a2e-1111-4a4a-9b9b-222222222222",
      "milestones": [
        {
          "catalogueMilestoneId": "ocr-h446-m01",
          "createdAt": "2026-09-01T10:00:00.000Z",
          "done": false,
          "due": "2027-03-01",
          "id": "ms-1",
          "kind": "nea",
          "name": "NEA draft",
          "updatedAt": "2026-09-01T10:00:00.000Z",
        },
        {
          "done": true,
          "due": null,
          "id": "custom-2f0c3a2e-1111-4a4a-9b9b-222222222222-m1",
          "kind": "practical",
          "name": "Practical",
        },
      ],
      "name": "Computer Science",
      "qualification": "alevel",
      "spec": "H446",
      "specName": null,
      "tier": null,
      "topics": [
        {
          "createdAt": "2026-09-01T10:00:00.000Z",
          "done": true,
          "id": "cs0",
          "name": "Algorithms",
          "subtasks": [],
          "updatedAt": "2026-09-01T10:00:00.000Z",
        },
      ],
      "updatedAt": "2026-09-01T10:00:00.000Z",
    },
  ],
  "tombstones": {
    "milestones": {},
    "sessions": {},
    "subjects": {},
    "topics": {},
  },
}
`;
